--- a/css/admin/admin.css
+++ b/css/admin/admin.css
@@ -271,8 +271,10 @@ nav .nav-profile {
 }
 
 .subjects {
+  max-width: 650px;
   display: flex;
   column-gap: 30px;
+  row-gap: 30px;
   flex-wrap: wrap;
 }
 
